--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ header:
  title: "Fotografia"
  subtitle: "por Nuno Gandra"
 footer:
- name: "Nuno"
-#
+ #name: "Nuno"
  bio: "Fotos portanto"
  github: "Quer um site similar de graça? Basta <a href="https://github.com/nunogand/fotografia">criar um fork no github</a>"
 web_design: "Nuno"
