--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ header:
 footer:
  name: "Nuno"
  bio: "Fotos portanto"
- #github: "Quer um site similar de graça? Basta <a href="https://github.com/nunogand/fotografia">criar um fork no github</a>"
+ github: "Quer um site similar de graça? Basta criar um fork no github"
 web_design: "Nuno"
 social_urls:
  facebook: "https://www.facebook.com"
