--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle: "Como eu vejo o mundo!"
 author: "Nuno Gandra"
 header:
  title: "Fotografia"
- subtitle: "por Nuno Gandra"
+ subtitle: "Nuno Gandra"
 footer:
  name: "Nuno Gandra"
  bio: "Como facilmente se vê, não sou fotógrafo!"
